[gd_scene load_steps=5 format=3 uid="uid://b5efj2aeb6soc"]

[ext_resource type="Script" uid="uid://b2b568nlo2peb" path="res://ui/start_menu.gd" id="1_bjjxn"]

[sub_resource type="SystemFont" id="SystemFont_nwsre"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_ab70g"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jdm4s"]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_bjjxn")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(700, 300)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Title" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 49.0
offset_bottom = 111.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_nwsre")
theme_override_font_sizes/font_size = 50
text = "deseja iniciar a fase?"
horizontal_alignment = 1
uppercase = true

[node name="StartGame" type="Button" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = SubResource("SystemFont_ab70g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jdm4s")
text = "INICAR FASE"

[node name="ReturnToMainMenu" type="Button" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = -20.0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = SubResource("SystemFont_ab70g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jdm4s")
text = "VOLTAR AO MENU"

[node name="SkipPhase" type="Button" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -155.0
offset_right = -250.0
offset_bottom = -95.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = SubResource("SystemFont_ab70g")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jdm4s")
text = "JOGAR MINIGAME"
